<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Anymatic</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registred! Login Me.</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="name">Fullname</string>
    
    <string name="btn_json">Json Request</string>
    <string name="btn_string">String Request</string>
    <string name="btn_image">Image Request</string>
    
    <string name="btn_json_obj_request">Json Object Request</string>
    <string name="btn_json_array_request">Json Array Request</string>

    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_all">Все товары</string>
    <string name="nav_stores">по Продавцам</string>
    <string name="nav_busket">Корзина</string>
    <string name="nav_orders">Заказы</string>
    <string name="nav_logout">Выйти</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Все товары</item>
        <item>По Продовцам</item>
        <item>Корзина</item>
        <item>Заказы</item>
        <item>Выйти</item>
    </string-array>

    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>


</resources>
